# hotloading-cpp

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  autocomp.sh  build.sh  musl_build.sh  musl_test_config.h.in  run_on_centos.sh  setup_project.sh  travis_build.sh
apps/: CMakeLists.txt  CommonTypes.h  Log.cpp  Log.h  main.cpp  main.old.h  unix_game.h
cmake/: dependencies.cmake  version.cmake
plugin/: CMakeLists.txt  Game.cpp  plugin.cpp
src/: CMakeLists.txt  CodeLoader.cpp  CodeLoader.h  FileWatcher.cpp  FileWatcher.h  Log.cpp  Log.h  Memory.h
tests/: CMakeLists.txt  test_FileWatcher.cpp  test_dummy.cpp  test_main.cpp  test_memory.cpp
